[package]
name = "nfa"
version = "0.1.1"
authors = ["Curtis Knudson <stomps.wikis_8t@icloud.com>"]
edition = "2021"
description = "A small CLI application for taking notes"
license = "MIT"
repository = "https://github.com/curtisknudson/nfa"
categories = ["command-line-utilities"]
[dependencies]
bincode = "1.3.3"
clap = { version = "4.5.27", features = ["derive"] }
dirs = "6.0.0"
rand = "0.9.0"
serde = { version = "1.0.217", features = ["derive"] }
sled = "0.34.7"
tempfile = "3.16.0"
